Remove some repetitive fetches and null checks